# IronRDP

./: Cargo.toml
crates/ironrdp/: Cargo.toml
crates/ironrdp-client/: Cargo.toml
crates/ironrdp-client/src/: config.rs  main.rs  rdp.rs
crates/ironrdp-connector/src/: connection.rs  connection_activation.rs
crates/ironrdp-pdu/src/rdp/capability_sets/: order.rs
crates/ironrdp-rdprail/: Cargo.toml  README.md
crates/ironrdp-rdprail/src/: lib.rs  pdu.rs
crates/ironrdp-session/src/: fast_path.rs
crates/ironrdp-svc/src/: lib.rs
crates/ironrdp-testsuite-core/src/: network_data.rs
crates/ironrdp/src/: lib.rs
